--- a/docs/src/pages/components/dialog.mdx
+++ b/docs/src/pages/components/dialog.mdx
@@ -185,7 +185,7 @@ This will hide the confirm and cancel buttons.
 </Component>
 ```
 
-## Remove default haeder
+## Remove default header
 
 Use the `hasHeader` prop to show or hide the header.
 This will hide both the close icon button as the title.
