--- a/docs/src/pages/components/corner-dialog.mdx
+++ b/docs/src/pages/components/corner-dialog.mdx
@@ -21,7 +21,7 @@ Multiple corner dialogs will stack on top of each other.
         isShown={state.isShown}
         onCloseComplete={() => setState({ isShown: false })}
       >
-        The cornder dialog component is used for new feature announcements
+        The corner dialog component is used for new feature announcements
         and feedback requests from the user.
       </CornerDialog>
       <Button onClick={() => setState({ isShown: true })}>
