Fix some typos. (#348)

--- a/docs/src/pages/components/checkbox.mdx
+++ b/docs/src/pages/components/checkbox.mdx
@@ -19,7 +19,7 @@ The `Checkbox` component maps to a checkbox input and a label.
 
 ## Controlled usage
 
-The `Checkbox` component passes on the orginal event through the `onChange` handler.
+The `Checkbox` component passes on the original event through the `onChange` handler.
 Use `e.target.checked` to get the latest value and update state accordingly.
 
 ```jsx
