--- a/docs/src/pages/components/menu.mdx
+++ b/docs/src/pages/components/menu.mdx
@@ -95,7 +95,7 @@ Menu items support a `onSelect` handler that is triggered on click and `enter` +
 
 ## Menu with icons
 
-The `onSelect` handlers are ommitted for brevity.
+The `onSelect` handlers are omitted for brevity.
 
 ```jsx
 <Popover
@@ -125,7 +125,7 @@ The `onSelect` handlers are ommitted for brevity.
 
 ## Groups with titles
 
-The `onSelect` handlers are ommitted for brevity.
+The `onSelect` handlers are omitted for brevity.
 
 ```jsx
 <Popover
