--- a/docs/src/pages/components/select-menu.mdx
+++ b/docs/src/pages/components/select-menu.mdx
@@ -15,7 +15,7 @@ and uses `react-tiny-virtual-list` for the rendering of the virtualized list of 
 
 ## Multiselect
 
-The `SelectMenu` is unopinonated in how many items are selected in the list.
+The `SelectMenu` is unopinionated in how many items are selected in the list.
 Pass an array to the `selected` prop to select more items.
 
 ## Options prop structure
