--- a/docs/src/pages/components/spinner.mdx
+++ b/docs/src/pages/components/spinner.mdx
@@ -39,7 +39,7 @@ Wrap your `Spinner` in a `Pane` to allow for centering of you `Spinner`.
 
 ## Centering with automatic margins
 
-Alernatively you can center a `Spinner` with margins.
+Alternatively you can center a `Spinner` with margins.
 
 ```jsx
 <Pane>
