--- a/docs/src/pages/components/table.mdx
+++ b/docs/src/pages/components/table.mdx
@@ -30,7 +30,7 @@ Evergreen exports the following components for tables:
 
 ## Full featured table examples
 
-The source code of this example is availble in `docs/src/components/examples/AdvancedTable` on [GitHub](https://github.com/segmentio/evergreen).
+The source code of this example is available in `docs/src/components/examples/AdvancedTable` on [GitHub](https://github.com/segmentio/evergreen).
 
 The following table is virtualized with `Table.VirtualBody`.
 
@@ -231,9 +231,9 @@ Evergreen gives some nice features when working with virtual tables:
 * `Table.VirtualBody` is a drop-in replacement for `Table.Body`
 * There is no need to pass the total items/rows up front
 * Rows can be dynamic per row
-* Row heights can be unknown up front with `height="auto"`, this will reduce perfomance however
+* Row heights can be unknown up front with `height="auto"`, this will reduce performance however
 
-### Simple virtuall body example
+### Simple virtual body example
 
 ```jsx
 <Table>
@@ -263,8 +263,8 @@ Evergreen gives some nice features when working with virtual tables:
 
 ### Complete virtual example
 
-The source code of this example is availble in `docs/src/components/examples/VirtualTable` on [GitHub](https://github.com/segmentio/evergreen).
-This example features dynaminc and auto heights.
+The source code of this example is available in `docs/src/components/examples/VirtualTable` on [GitHub](https://github.com/segmentio/evergreen).
+This example features dynamic and auto heights.
 
 <VirtualTable />
 
