--- a/docs/src/pages/components/toaster.mdx
+++ b/docs/src/pages/components/toaster.mdx
@@ -25,7 +25,7 @@ The following types are available:
 ### Closing all toasts
 
 In some situations toasts might become outdated before they expire.
-For example when showing a toast in a setup flow, canceling out of that setup flow might make the toast unrelevant.
+For example when showing a toast in a setup flow, canceling out of that setup flow might make the toast irrelevant.
 
 In those situations you can use `toaster.closeAll()` to close all open toasts.
 
