--- a/docs/src/pages/components/tooltip.mdx
+++ b/docs/src/pages/components/tooltip.mdx
@@ -54,7 +54,7 @@ The `Tooltip` can be positioned on the following positions using the `position` 
 * `Position.LEFT`
 * `Position.RIGHT`
 
-For a `Tooltip` the only realy useful sides are `TOP`, `RIGHT`, `BOTTOM` and `LEFT` as shown below.
+For a `Tooltip` the only really useful sides are `TOP`, `RIGHT`, `BOTTOM` and `LEFT` as shown below.
 
 ```jsx
 <Pane display="flex" justifyContent="space-between">
