--- a/docs/src/pages/components/typography.mdx
+++ b/docs/src/pages/components/typography.mdx
@@ -117,7 +117,7 @@ The size options are: `100`, `200`, `300`, `400`, `500` (default), `600`, `700`,
 
 ## Changing the semantic element
 
-The `Heading` component will always render a `h2` until you specifiy otherwise with the `is` property.
+The `Heading` component will always render a `h2` until you specify otherwise with the `is` property.
 It’s important to realize that the style of a heading is independent from the semantic underlying element.
 
 ```jsx
