--- a/docs/src/pages/components/switch.mdx
+++ b/docs/src/pages/components/switch.mdx
@@ -30,7 +30,7 @@ The `Switch` will work with any `height` you pass it. Although it’s only every
 
 ## Controlled usage
 
-The `Switch` component passes on the orginal event through the `onChange` handler.
+The `Switch` component passes on the original event through the `onChange` handler.
 Use `e.target.checked` to get the latest value and update state accordingly.
 
 ```jsx
