update mdx playground (#392)

--- a/docs/src/pages/components/select-menu.mdx
+++ b/docs/src/pages/components/select-menu.mdx
@@ -20,7 +20,7 @@ Pass an array to the `selected` prop to select more items.
 
 ## Options prop structure
 
-<SyntaxHighlighter>{`
+```js static
 const options = [
   {
     label: 'String',
@@ -28,7 +28,7 @@ const options = [
     value: 'String or Number'
   }
 ]
-`}</SyntaxHighlighter>
+```
 
 ## Single selected item
 
