--- a/docs/src/pages/components/tab.mdx
+++ b/docs/src/pages/components/tab.mdx
@@ -33,7 +33,7 @@ If you are not using a link (`a` tag) for your Tab,
 make sure to wrap in a `Tablist`, see examples below.
 
 
-``jsx collapse
+```jsx collapse
 <Component
   initialState={{
     selectedIndex: 0,
