Fix typo in autocomplete docs (#480)

--- a/docs/src/pages/components/autocomplete.mdx
+++ b/docs/src/pages/components/autocomplete.mdx
@@ -121,7 +121,7 @@ Get the `openMenu` prop to manually open the menu on certain events such as `onF
 ## Fully featured example
 
 Full width with flex and options title, onFocus, filtering, and button to trigger the autocomplete.
-Note that this is very similar the `Combobox` component.
+Note that this is very similar to the `Combobox` component.
 Consider using that component before using the `Autocomplete` component directly.
 
 ```jsx
