--- a/docs/src/pages/components/select-menu.mdx
+++ b/docs/src/pages/components/select-menu.mdx
@@ -269,13 +269,59 @@ This example shows basic usage for disabling some options. Options that are disa
 <Component initialState={{ selected: null }}>
   {({ setState, state }) => (
     <Pane>
-    <Pane marginBottom={8}>
-      <Text>Filter value: {state.filter}</Text>
-    </Pane>
     <SelectMenu
       title="Select Option"
       options={
         [{ label: "Disabled", value: "disabled", disabled: true }, { label: "Not Disabled", value: "not-disabled" }]
+      }
+      selected={state.selected}
+      onSelect={item => setState({ selected: item.value })}
+    >
+      <Button>{state.selected || 'Select name...'}</Button>
+    </SelectMenu>
+    </Pane>
+  )}
+  
+</Component>
+```
+## Custom Title Example
+
+This example shows how one should use titleView to pass in a custom title.
+
+```jsx
+<Component initialState={{ selected: null }}>
+  {({ setState, state }) => (
+    <Pane>
+    <SelectMenu
+      title="Select Option"
+      tooltipContent="Choose one of the options below."
+      titleView={({ close, title, headerHeight }) => {
+        return (
+          <Pane
+            display="flex"
+            alignItems="center"
+            borderBottom="default"
+            padding={8}
+            height={headerHeight}
+            boxSizing="border-box"
+          >
+            <Pane flex="1" display="flex" alignItems="center">
+              <Heading size={400}>{title}</Heading>
+                <Tooltip content="Pick one of the options below">
+                  <Icon size={12} marginLeft={4} icon="help" />
+                </Tooltip>
+            </Pane>
+            <IconButton
+              icon="cross"
+              appearance="minimal"
+              height={24}
+              onClick={close}
+            />
+          </Pane>             
+        )
+      }}
+      options={
+        [{ label: "Option 1", value: "option-1"}, { label: "Option 2", value: "option-2" }]
       }
       selected={state.selected}
       onSelect={item => setState({ selected: item.value })}
