Allow SelectMenuContent to have editable placeholder icon & value (#494)
* allow filter place holder and filter icon to be editable

* pass down props to middle component

* add story to show change

* fix comments

* remove placeholder from props destructuring

* add icon to proptypes

* add documentation

* add documentation

--- a/docs/src/pages/components/select-menu.mdx
+++ b/docs/src/pages/components/select-menu.mdx
@@ -334,4 +334,31 @@ This example shows how one should use titleView to pass in a custom title.
 </Component>
 ```
 
+## Custom Filter PlaceHolder and Icon Example
+
+It's possible to change the filter placeholder and filter icon through the `filterPlaceholder` and `filterIcon` props.
+
+Note that the icon can be one found in Segment's various [icons](https://evergreen.segment.com/components/icons), or `none`.
+
+
+```jsx
+<Component initialState={{ selected: null }}>
+  {({ setState, state }) => (
+    <SelectMenu
+      title="Select name"
+      options={
+        ['Comedy', 'Drama', 'Fantasy', 'Family', 'Action']
+          .map(label => ({ label, value: label }))
+      }
+      selected={state.selected}
+      onSelect={item => setState({ selected: item.value })}
+      filterPlaceholder={"Choose a genre"}
+      filterIcon={"film"}
+    >
+      <Button>{state.selected || 'Select name...'}</Button>
+    </SelectMenu>
+  )}
+</Component>
+```
+
 <PropsTable of="SelectMenu" />
