Fix Combobox filtering with custom itemToString (#495)
Fixes: #215

If you supply an `itemToString` to an `Autocomplete` / `Combobox`, we will now correctly fuzzy filter on the string values.

| Before | After |
| ------ | ----- |
| ![image](https://user-images.githubusercontent.com/2907397/52526583-bb7c7a80-2c6f-11e9-8ac2-ee30a7643653.png) | ![image](https://user-images.githubusercontent.com/2907397/52526578-90922680-2c6f-11e9-9a0c-6ed1deda7fb4.png) |

--- a/docs/src/pages/components/combobox.mdx
+++ b/docs/src/pages/components/combobox.mdx
@@ -74,7 +74,7 @@ Typing in the text input will filter the list.
 <Combobox
   defaultSelectedItem={{ label: 'Banana' }}
   items={[{ label: 'Banana' }, { label: 'Pear' }, { label: 'Kiwi' }]}
-  itemToString={item => item.label}
+  itemToString={item => item ? item.label : ''}
   onChange={selected => console.log(selected)}
 />
 ```
