Add documentation for using buttons as links (#518)
* Add documentation for using buttons as links

* Small copy change

--- a/docs/src/pages/components/button.mdx
+++ b/docs/src/pages/components/button.mdx
@@ -398,6 +398,14 @@ The `BackButton` component is a preset based on the `Button` component.
 
 <PropsTable of="BackButton" />
 
+# Buttons as links
+
+Buttons can be used as links by using the optional `is` property with a value such as `Link` from [react-router](https://github.com/ReactTraining/react-router), or an `a` tag.
+
+```jsx
+<Button is="a" href="#">Link</Button>
+```
+
 # TextDropdownButton component
 
 The `TextDropdownButton` is different from the other types of buttons.
