feat(popover): add prop to disable close on body click (#558)

--- a/docs/src/pages/components/popover.mdx
+++ b/docs/src/pages/components/popover.mdx
@@ -260,6 +260,27 @@ The Popover can be positioned on the following positions using the `position` pr
   </Pane>
 </Pane>
 ```
+## Disable Close on Body Click
 
+```jsx
+<Popover
+  content={({ close }) => (
+    <Pane
+      width={320}
+      height={320}
+      paddingX={40}
+      display="flex"
+      alignItems="center"
+      justifyContent="center"
+      flexDirection="column"
+    >
+      <Button onClick={close}>Close</Button>
+    </Pane>
+  )}
+  shouldCloseOnExternalClick={false}
+>
+  <Button>Trigger Popover</Button>
+</Popover>
+```
 
 <PropsTable of="Popover" />
