Fix src of the avatar documentation (#585)
The src now points to a public domain image hosted on wikimedia

--- a/docs/src/pages/components/avatar.mdx
+++ b/docs/src/pages/components/avatar.mdx
@@ -27,8 +27,8 @@ Use the `src` property to create a avatar with a image.
 
 ```jsx
 <Avatar
-  src="https://pbs.twimg.com/profile_images/756196362576723968/6GUgJG4L_400x400.jpg"
-  name="Jeroen Ransijn"
+  src="https://upload.wikimedia.org/wikipedia/commons/a/a1/Alan_Turing_Aged_16.jpg"
+  name="Alan Turing"
   size={40}
 />
 ```
