Add closeOnSelect prop to SelectMenu (#588)
* Add closeOnSelect prop to SelectMenu

This change adds a prop that when true the select
menu will close when an option has been selected.

closes #456

* Add docs for SelectMenu closeOnSave

--- a/docs/src/pages/components/select-menu.mdx
+++ b/docs/src/pages/components/select-menu.mdx
@@ -18,6 +18,12 @@ and uses `react-tiny-virtual-list` for the rendering of the virtualized list of 
 The `SelectMenu` is unopinionated in how many items are selected in the list.
 Pass an array to the `selected` prop to select more items.
 
+## Close on select
+
+The `SelectMenu` by default will stay open when an option is selected.
+This can be configured so that the menu closes on selection.
+This will not apply for Multiselect menus.
+
 ## Options prop structure
 
 ```js static
