Fix spelling in table.mdx (#590)

--- a/docs/src/pages/components/table.mdx
+++ b/docs/src/pages/components/table.mdx
@@ -12,7 +12,7 @@ Currently this package does not use real table elements.
 
 * None of these components implement HTML table elements such as: `table`, `th` or `tr`.
 * Most components are basic `Pane` components combined with `Text`.
-* All components are presentational, no sorting build in.
+* All components are presentational, there is no built-in sorting.
 
 ### Available components
 
